[tool.poetry]
name = "radar"
version = "3.9.7"
description = "RaDaR - Rare Disease Registry"
readme = "README.md"
authors = ["Rupert Bedford <rupert.bedford@renalregistry.nhs.uk>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
alembic = ">=1.13"
sqlalchemy = "1.4.49"
celery = ">=5.4,<6"
amqp = ">=5.1"
billiard = ">=4.2"
flask = ">=2.0,<3"
flask-sqlalchemy = "2.5.1"
flask-admin = "1.6.1"
jinja2 = ">=3.1"
markupsafe = ">=2.1"
itsdangerous = ">=2.2"
werkzeug = ">=2.3,<3"
click = ">=8.1,<9"
termcolor = ">=2.4"
tqdm = ">=4.66"
inflection = ">=0.5"
iso8601 = ">=2.1"
python-dateutil = ">=2.9"
pytz = ">=2024.1"
tzlocal = ">=5.2"
six = ">=1.16"
jsonschema = ">=4.23"
bleach = ">=6.1"
html5lib = ">=1.1"
requests = ">=2.32"
openpyxl = ">=3.1"
xlsxwriter = ">=3.2"
tablib = ">=3.5"
wtforms = ">=3.1"
js2py = ">=0.74"
zxcvbn-python = ">=4.4"
cornflake = "0.2.4"
psycopg2-binary = { version = ">=2.9", markers = "sys_platform != 'win32'" }
psycopg2 = { version = ">=2.9", markers = "sys_platform == 'win32'" }
setuptools = "*"

[tool.poetry.scripts]
radar-admin = "radar.admin.__main__:main"
radar-api = "radar.api.__main__:main"
radar-db = "radar.database.__main__:main"
radar-exporter = "radar.exporter.__main__:main"
radar-fixtures = "radar.fixtures.__main__:main"
radar-ukrdc-exporter = "radar.ukrdc_exporter.__main__:main"
radar-ukrdc-importer = "radar.ukrdc_importer.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
coverage = ">=7.5"
freezegun = ">=1.5"
flake8 = ">=7.0"
flake8-import-order = ">=0.18"
pycodestyle = ">=2.11"
pyflakes = ">=3.2"
mccabe = ">=0.7"
ecdsa = ">=0.19"
pycryptodome = ">=3.20"
paramiko = ">=3.4"
fabric = ">=3.2"
tox = ">=4.11"
virtualenv = ">=20.26"
pluggy = ">=1.5"

[build-system]
requires = ["poetry-core>=2.3.0"]
build-backend = "poetry.core.masonry.api"
